c_capture/include/capture_types.h

/**
 * 设备信息结构
 */
typedef struct {
    char name[32];           // 设备名称
    char description[256];   // 设备描述
    uint32_t flags;          // 设备标志
    uint32_t type;           // 设备类型
    uint32_t mtu;            // MTU 大小
    uint32_t speed;          // 接口速度
    uint8_t mac[6];          // MAC 地址
    uint32_t ipv4;           // IPv4 地址
    uint32_t netmask;        // 子网掩码
    uint32_t broadcast;      // 广播地址
} capture_device_t;
/**
 * 统计信息结构
 */
typedef struct {
    uint64_t packets_received;    // 接收的数据包数
    uint64_t packets_dropped;     // 丢弃的数据包数
    uint64_t packets_if_dropped;  // 接口丢弃的数据包数
    uint64_t bytes_received;      // 接收的字节数
    struct timespec start_time;   // 开始时间
    struct timespec end_time;     // 结束时间
} capture_stats_t;