rust_core/target/debug/build/rust_core-6135a91b0c643109/out/bindings.rs

#[doc = " 后端操作函数表"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct capture_backend_ops_t {
    pub init: ::std::option::Option<
        unsafe extern "C" fn(
            backend: *mut ::std::os::raw::c_void,
            config: *const capture_config_t,
        ) -> ::std::os::raw::c_int,
    >,
    pub cleanup: ::std::option::Option<unsafe extern "C" fn(backend: *mut ::std::os::raw::c_void)>,
    pub open: ::std::option::Option<
        unsafe extern "C" fn(
            backend: *mut ::std::os::raw::c_void,
            device: *const ::std::os::raw::c_char,
        ) -> ::std::os::raw::c_int,
    >,
    pub close: ::std::option::Option<
        unsafe extern "C" fn(backend: *mut ::std::os::raw::c_void) -> ::std::os::raw::c_int,
    >,
    pub start: ::std::option::Option<
        unsafe extern "C" fn(
            backend: *mut ::std::os::raw::c_void,
            callback: packet_callback_t,
            user_data: *mut ::std::os::raw::c_void,
        ) -> ::std::os::raw::c_int,
    >,
    pub stop: ::std::option::Option<
        unsafe extern "C" fn(backend: *mut ::std::os::raw::c_void) -> ::std::os::raw::c_int,
    >,
    pub pause: ::std::option::Option<
        unsafe extern "C" fn(backend: *mut ::std::os::raw::c_void) -> ::std::os::raw::c_int,
    >,
    pub resume: ::std::option::Option<
        unsafe extern "C" fn(backend: *mut ::std::os::raw::c_void) -> ::std::os::raw::c_int,
    >,
    pub set_filter: ::std::option::Option<
        unsafe extern "C" fn(
            backend: *mut ::std::os::raw::c_void,
            filter: *const ::std::os::raw::c_char,
        ) -> ::std::os::raw::c_int,
    >,
    pub get_stats: ::std::option::Option<
        unsafe extern "C" fn(
            backend: *mut ::std::os::raw::c_void,
            stats: *mut capture_stats_t,
        ) -> ::std::os::raw::c_int,
    >,
    pub get_devices: ::std::option::Option<
        unsafe extern "C" fn(
            backend: *mut ::std::os::raw::c_void,
            devices: *mut *mut capture_device_t,
            count: *mut ::std::os::raw::c_int,
        ) -> ::std::os::raw::c_int,
    >,
    pub free_devices: ::std::option::Option<
        unsafe extern "C" fn(
            backend: *mut ::std::os::raw::c_void,
            devices: *mut capture_device_t,
            count: ::std::os::raw::c_int,
        ),
    >,
    pub get_name: ::std::option::Option<
        unsafe extern "C" fn(backend: *mut ::std::os::raw::c_void) -> *const ::std::os::raw::c_char,
    >,
    pub get_version: ::std::option::Option<
        unsafe extern "C" fn(backend: *mut ::std::os::raw::c_void) -> *const ::std::os::raw::c_char,
    >,
    pub get_description: ::std::option::Option<
        unsafe extern "C" fn(backend: *mut ::std::os::raw::c_void) -> *const ::std::os::raw::c_char,
    >,
    pub is_feature_supported: ::std::option::Option<
        unsafe extern "C" fn(
            backend: *mut ::std::os::raw::c_void,
            feature: *const ::std::os::raw::c_char,
        ) -> bool,
    >,
    pub set_option: ::std::option::Option<
        unsafe extern "C" fn(
            backend: *mut ::std::os::raw::c_void,
            option: *const ::std::os::raw::c_char,
            value: *const ::std::os::raw::c_void,
        ) -> ::std::os::raw::c_int,
    >,
    pub get_option: ::std::option::Option<
        unsafe extern "C" fn(
            backend: *mut ::std::os::raw::c_void,
            option: *const ::std::os::raw::c_char,
            value: *mut ::std::os::raw::c_void,
        ) -> ::std::os::raw::c_int,
    >,
}
#[test]
fn bindgen_test_layout_capture_backend_ops_t() {
    const UNINIT: ::std::mem::MaybeUninit<capture_backend_ops_t> =
        ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<capture_backend_ops_t>(),
        144usize,
        concat!("Size of: ", stringify!(capture_backend_ops_t))
    );
    assert_eq!(
        ::std::mem::align_of::<capture_backend_ops_t>(),
        8usize,
        concat!("Alignment of ", stringify!(capture_backend_ops_t))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).init) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(capture_backend_ops_t),
            "::",
            stringify!(init)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).cleanup) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(capture_backend_ops_t),
            "::",
            stringify!(cleanup)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).open) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(capture_backend_ops_t),
            "::",
            stringify!(open)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).close) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(capture_backend_ops_t),
            "::",
            stringify!(close)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).start) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(capture_backend_ops_t),
            "::",
            stringify!(start)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).stop) as usize - ptr as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(capture_backend_ops_t),
            "::",
            stringify!(stop)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).pause) as usize - ptr as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(capture_backend_ops_t),
            "::",
            stringify!(pause)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).resume) as usize - ptr as usize },
        56usize,
        concat!(
            "Offset of field: ",
            stringify!(capture_backend_ops_t),
            "::",
            stringify!(resume)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).set_filter) as usize - ptr as usize },
        64usize,
        concat!(
            "Offset of field: ",
            stringify!(capture_backend_ops_t),
            "::",
            stringify!(set_filter)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).get_stats) as usize - ptr as usize },
        72usize,
        concat!(
            "Offset of field: ",
            stringify!(capture_backend_ops_t),
            "::",
            stringify!(get_stats)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).get_devices) as usize - ptr as usize },
        80usize,
        concat!(
            "Offset of field: ",
            stringify!(capture_backend_ops_t),
            "::",
            stringify!(get_devices)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).free_devices) as usize - ptr as usize },
        88usize,
        concat!(
            "Offset of field: ",
            stringify!(capture_backend_ops_t),
            "::",
            stringify!(free_devices)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).get_name) as usize - ptr as usize },
        96usize,
        concat!(
            "Offset of field: ",
            stringify!(capture_backend_ops_t),
            "::",
            stringify!(get_name)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).get_version) as usize - ptr as usize },
        104usize,
        concat!(
            "Offset of field: ",
            stringify!(capture_backend_ops_t),
            "::",
            stringify!(get_version)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).get_description) as usize - ptr as usize },
        112usize,
        concat!(
            "Offset of field: ",
            stringify!(capture_backend_ops_t),
            "::",
            stringify!(get_description)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).is_feature_supported) as usize - ptr as usize },
        120usize,
        concat!(
            "Offset of field: ",
            stringify!(capture_backend_ops_t),
            "::",
            stringify!(is_feature_supported)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).set_option) as usize - ptr as usize },
        128usize,
        concat!(
            "Offset of field: ",
            stringify!(capture_backend_ops_t),
            "::",
            stringify!(set_option)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).get_option) as usize - ptr as usize },
        136usize,
        concat!(
            "Offset of field: ",
            stringify!(capture_backend_ops_t),
            "::",
            stringify!(get_option)
        )
    );
}
#[doc = " 后端结构"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct capture_backend_t {
    pub private_data: *mut ::std::os::raw::c_void,
    pub ops: *mut capture_backend_ops_t,
    pub type_: capture_backend_type_t,
    pub error_cb: error_callback_t,
    pub error_user_data: *mut ::std::os::raw::c_void,
}
#[test]
fn bindgen_test_layout_capture_backend_t() {
    const UNINIT: ::std::mem::MaybeUninit<capture_backend_t> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<capture_backend_t>(),
        40usize,
        concat!("Size of: ", stringify!(capture_backend_t))
    );
    assert_eq!(
        ::std::mem::align_of::<capture_backend_t>(),
        8usize,
        concat!("Alignment of ", stringify!(capture_backend_t))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).private_data) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(capture_backend_t),
            "::",
            stringify!(private_data)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).ops) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(capture_backend_t),
            "::",
            stringify!(ops)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).type_) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(capture_backend_t),
            "::",
            stringify!(type_)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).error_cb) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(capture_backend_t),
            "::",
            stringify!(error_cb)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).error_user_data) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(capture_backend_t),
            "::",
            stringify!(error_user_data)
        )
    );
}
extern "C" {
    #[doc = " 注册后端\n @param backend 后端结构\n @return 成功返回 0，失败返回错误码"]
    pub fn capture_backend_register(backend: *mut capture_backend_t) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " 注销后端\n @param type 后端类型\n @return 成功返回 0，失败返回错误码"]
    pub fn capture_backend_unregister(type_: capture_backend_type_t) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " 获取后端\n @param type 后端类型\n @return 成功返回后端结构，失败返回 NULL"]
    pub fn capture_backend_get(type_: capture_backend_type_t) -> *mut capture_backend_t;
}
